--- a/index.html
+++ b/index.html
@@ -5,38 +5,38 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>User Registration</title>
     <link rel="stylesheet" href="index.css">
-    <script src="index.js"></script>
 
 </head>
 <body>
-    <div class="container">
-        <div class="logo">
-            <img src="note.png" alt="App Logo">
-        </div>
-        <div class="registration-form">
-            <h2>Register</h2>
-            <form action="/register" method="POST">
-                <div class="form-group">
-                    <label for="username">Username:</label>
-                    <input type="text" id="username" name="username" required>
-                </div>
-                <div class="form-group">
-                    <label for="email">Email:</label>
-                    <input type="email" id="email" name="email" required>
-                </div>
-                <div class="form-group">
-                    <label for="password">Password:</label>
-                    <input type="password" id="password" name="password" required>
-                </div>
-                <div class="form-group">
-                    <label for="confirm-password">Confirm Password:</label>
-                    <input type="password" id="confirm-password" name="confirm-password" required>
-                </div>
-                <div class="form-group">
-                    <button type="submit">Register</button>
-                </div>
-            </form>
-        </div>
-    </div>
+  <div class="container">
+      <div class="logo">
+          <img src="note.jpg" alt="App Logo">
+      </div>
+      <div class="registration-form">
+          <h2>Register</h2>
+          <form action="/register" method="POST">
+              <div class="form-group">
+                  <label for="username">Username:</label>
+                  <input type="text" id="username" name="username" required>
+              </div>
+              <div class="form-group">
+                  <label for="email">Email:</label>
+                  <input type="email" id="email" name="email" required>
+              </div>
+              <div class="form-group">
+                  <label for="password">Password:</label>
+                  <input type="password" id="password" name="password" required>
+              </div>
+              <div class="form-group">
+                  <label for="confirm-password">Confirm Password:</label>
+                  <input type="password" id="confirm-password" name="confirm-password" required>
+              </div>
+              <div class="form-group">
+                  <button type="submit">Register</button>
+              </div>
+          </form>
+      </div>
+  </div>
+  <script src="index.js"></script>
 </body>
 </html>
